--- a/api/views/index.ejs
+++ b/api/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
+    <h1><%= JSON.stringify(title)%></h1>
     <p>Welcome to <%= title %></p>
   </body>
 </html>
