--- a/api/views/admin.ejs
+++ b/api/views/admin.ejs
@@ -296,8 +296,19 @@
                     </td>
 
                     <td class="actions-cell">
-                      <button class="btn btn-sm btn-edit" onclick="openModal('editRoleModal')">✏️ Edit</button>
-                      <button class="btn btn-sm btn-delete">🗑️ Del</button>
+                      <% if(["role_update"].some(r=>userPermissionsName.includes(r))){ %>
+                        <button class="btn btn-sm btn-edit"
+                          onclick="openModal('editRoleModal'); getValueOfEditRoleInput('<%= JSON.stringify(role) %>');">✏️
+                          Edit</button>
+                        <% } %>
+                          <% if(["role_delete"].some(r=>userPermissionsName.includes(r))){ %>
+                            <button class="btn btn-sm btn-delete" onclick="deleteRole('<%= role._id %>')">🗑️
+                              Del</button>
+                            <% } %>
+                              <% if (!["role_update"].some(r=>userPermissionsName.includes(r)) &&
+                                !["role_delete"].some(r=>userPermissionsName.includes(r))){%>
+                                <button class="btn btn-sm ">🚫</button>
+                                <% } %>
                     </td>
                   </tr>
                   <%}%>
@@ -544,7 +555,8 @@
                 Update</label>
               <label class="checkbox-label"><input type="checkbox" name="permissions" value="role_delete"> Role
                 Delete</label>
-              <label class="checkbox-label"><input type="checkbox" name="permissions" value="category_view"> Category
+              <label class="checkbox-label"><input type="checkbox" name="permissions" value="category_view"
+                  checked="true" disabled> Category
                 View</label>
               <label class="checkbox-label"><input type="checkbox" name="permissions" value="category_add"> Category
                 Add</label>
@@ -558,12 +570,13 @@
                 View</label>
             </div>
           </div>
+          <div class="modal-footer">
+            <button class="btn btn-outline" onclick="closeModal('addRoleModal')">Cancel</button>
+            <button class="btn btn-primary">Add Role</button>
+          </div>
         </form>
       </div>
-      <div class="modal-footer">
-        <button class="btn btn-outline" onclick="closeModal('addRoleModal')">Cancel</button>
-        <button class="btn btn-primary">Add Role</button>
-      </div>
+
     </div>
   </div>
 
@@ -661,7 +674,7 @@
         <form id="editRoleForm">
           <div class="form-group">
             <label>Role Name *</label>
-            <input class="form-control" type="text" name="role_name" placeholder="e.g. Editor" />
+            <input id="edit_role_name" class="form-control" type="text" name="role_name" placeholder="e.g. Editor" />
           </div>
           <div class="form-group">
             <label>Status</label>
@@ -687,7 +700,7 @@
                 Update</label>
               <label class="checkbox-label"><input type="checkbox" name="permissions" value="role_delete"> Role
                 Delete</label>
-              <label class="checkbox-label"><input type="checkbox" name="permissions" value="category_view"> Category
+              <label class="checkbox-label"><input type="checkbox" name="permissions" value="category_view" checke="true" disabled> Category
                 View</label>
               <label class="checkbox-label"><input type="checkbox" name="permissions" value="category_add"> Category
                 Add</label>
@@ -700,13 +713,14 @@
               <label class="checkbox-label"><input type="checkbox" name="permissions" value="auditlogs_view"> Auditlogs
                 View</label>
             </div>
-          </div>
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-outline" onclick="closeModal('editRoleModal')">Cancel</button>
+              <button class="btn btn-primary">Save Changes</button>
+            </div>
         </form>
       </div>
-      <div class="modal-footer">
-        <button class="btn btn-outline" onclick="closeModal('editRoleModal')">Cancel</button>
-        <button class="btn btn-primary">Save Changes</button>
-      </div>
+
     </div>
   </div>
 
